--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
              <main class="appScreen p-2 h-100" style="display: none">
                 <div class="icon-container d-flex justify-content-center">
                     <div class="d-flex flex-column">
-                        <i class="fa-solid fa-address-book fs-1 text-danger bg-white p-2 rounded text-center"></i>
+                        <i class=" icon fa-solid fa-address-book fs-1 text-danger bg-white p-2 rounded text-center"></i>
                         <span class="text-white">Contacts</span>
                     </div>
 
