--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,7 +49,7 @@
             <!-- Icon screen -->
              <main class="appScreen p-2 h-100" style="display: none">
                 <div class="icon-container d-flex justify-content-center">
-                    <div class="d-flex flex-column">
+                    <div class="d-flex flex-column phoneBookIcon">
                         <i class=" icon fa-solid fa-address-book fs-1 text-danger bg-white p-2 rounded text-center"></i>
                         <span class="text-white">Contacts</span>
                     </div>
@@ -68,7 +69,8 @@
                         <i class="fa-solid fa-magnifying-glass fs-3 position-absolute m-2 text-secondary" style="right: 10px;"></i>
                       
                       <input type="text" 
-                      class="form-control">
+                      class="form-control search"
+                      >
                     </div>
                     <!-- spineer -->
                      <div class="bg-light w-25 p-3 rounded m-auto showSpinner" style="display: none;">
@@ -76,12 +78,18 @@
                         <span class="visually-hidden">Loading...</span>
                       </div>
                     </div>
+
+                    <!-- <div id="list" class="bg-light p-1">
+              <div class="py-2 counter">10 contacts found!</div>
+
+              <div class="accordion" id="accordionExample"></div>
+            </div> -->
                 
                     <!-- contact list -->
-                    <span>Hello</span>
-                    <div id="list"  class="bg-light p-1">
+                    <div id="list"  class="bg-light p-1 scroll-box">
+                      <div class="py-2 counter"> 10 contacts found</div>
                         <div class="accordion" id="accordionExample">
-                            <div class="accordion-item">
+                            <!-- <div class="accordion-item">
                               <h2 class="accordion-header">
                                 <button 
                                 class="accordion-button" 
@@ -109,7 +117,7 @@
                                     <div><i class="fa-solid fa-location-dot"></i>12345 avenue</div>
                                 </div>
                               </div>
-                            </div>
+                            </div> -->
                             <!-- <div class="accordion-item">
                               <h2 class="accordion-header">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -148,3 +156,5 @@
     <script src="./script.js"></script>
 </body>
 </html>
+
+
